2006-04-28  Johannes Schmid <jhs@cvs.gnome.org>

	* manuals/C/Makefile.am:
	* manuals/Makefile.am:
	* plugins/document-manager/Makefile.am:
	* plugins/project-wizard/templates/anjuta-plugin/Makefile.am:
	* plugins/sourceview/Makefile.am:
	* tagmanager/c.c:
	
	Fixed distcheck
	
	* plugins/class-gen/goc_template_header: G_END_DECLS

2006-05-27  Naba Kumar <naba@gnome.org>

	* (added) scintilla/LexSpice.cxx, scintilla/Editor.cxx,
	scintilla/KeyWords.cxx, scintilla/LexSQL.cxx, scintilla/LexTCL.cxx,
	scintilla/Makefile.am, scintilla/PlatGTK.cxx, scintilla/lexers.make,
	scintilla/include/HFacer.py, scintilla/include/SciLexer.h,
	scintilla/include/Scintilla.iface,
	(remove) scintilla/patches/pango-1.8.patch: Updated scintilla from
	cvs. Fixed compile flags. Removed outdated patches.

2006-04-27  Johannes Schmid <jhs@cvs.gnome.org>

	* configure.in: Require libgladeui 2.91.1 (for glade3 plugin)

	* plugins/sourceview/anjuta-document.c:
	* plugins/sourceview/sourceview-args.c:
	* plugins/sourceview/sourceview-scope.c:
	
	Add End/Home keypresses and support completion if symbol start with '!' for example
	in an if statement

2006-04-27 Massimo Cora' <maxcvs@email.it>

	* libanjuta/interfaces/libanjuta.idl:

	* plugins/sourceview/sourceview-scope.c:
	* plugins/sourceview/tag-window.c: 
	* plugins/sourceview/tag-window.h:
	* plugins/symbol-browser/an_symbol_view.c:
	* plugins/symbol-browser/an_symbol_view.h:
	* plugins/symbol-browser/plugin.c:
	
	added and implemented IAnjutaSymbolManager -> get_completions_at_position ()
	interface.
	Code and ideas for C/C++ new completion engine comes from IComplete written by
	Martin Stubenschrott <stubenschrott@gmx.net>.
	Currently the interface works only with GtkSourceView plugin.	
	
	* tagmanager/Makefile.am:
	* tagmanager/c.c: 
	* tagmanager/entry.h:
	* tagmanager/get.c:
	* tagmanager/get.h:
	* tagmanager/include/tm_file_entry.h:
	* tagmanager/include/tm_project.h:
	* tagmanager/include/tm_source_file.h: